// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fill in a simple template 1`] = `"let variable = \\"String\\";"`;

exports[`should fill in a template with a either 1`] = `"let variable = \\"String\\";"`;

exports[`should fill in a template with a either 2`] = `"let variable = 10;"`;

exports[`should fill in a template with a either and a repeat 1`] = `
"let variable = \\"String\\";

let variable = 10;"
`;

exports[`should fill in a template with a repeat 1`] = `
"let variable = \\"String\\";

let variable2 = \\"String2\\";"
`;

exports[`should fill in a teomplate with a either and a repeat on an expression 1`] = `"return [(\\"String\\", 10)];"`;
